tests/ui/consts/issue-94675.stderr
error[E0277]: the trait bound `Vec<usize>: [const] Index<_>` is not satisfied
  --> $DIR/issue-94675.rs:11:9
   |
LL |         self.bar[0] = baz.len();
   |         ^^^^^^^^^^^
   |
note: trait `Index` is implemented but not `const`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error[E0277]: the trait bound `Vec<usize>: [const] IndexMut<usize>` is not satisfied
  --> $DIR/issue-94675.rs:11:9
   |
LL |         self.bar[0] = baz.len();
   |         ^^^^^^^^^^^
   |
note: trait `IndexMut` is implemented but not `const`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
